Gestion de pagos

--- a/parqueadero/templates/parqueadero/dashboard.html
+++ b/parqueadero/templates/parqueadero/dashboard.html
@@ -164,6 +164,7 @@
                                         <li><a class="dropdown-item" href="{% url 'usuarios' %}">Gestión de usuarios</a></li>
                                         <li><a class="dropdown-item" href="{% url 'vehiculos' %}">Gestión de vehículos</a></li>
                                         <li><a class="dropdown-item" href="{% url 'celdas' %}">Gestión de celdas</a></li>
+                                        <li><a class="dropdown-item" href="{% url 'pagos' %}">Gestión de pagos</a></li>
                                     {% endif %}
                                 </ul>
                             </div>
